retomamos con correccion de errores y preparamos para merge